--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "devDependencies": {
     "@mermaid-js/mermaid-cli": "^9.1.7",
     "prisma": "^4.5.0",
@@ -17,8 +20,10 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
-    "fastify": "^4.9.2",
     "@fastify/cors": "^8.1.1",
-    "@prisma/client": "^4.5.0"
+    "@prisma/client": "^4.5.0",
+    "fastify": "^4.9.2",
+    "short-unique-id": "^4.4.4",
+    "zod": "^3.19.1"
   }
 }
