--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -1,3 +1,30 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node": true
+    },
+    "extends": [
+        "plugin:react/recommended",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/eslint-recommended",
+        "plugin:@typescript-eslint/recommended",
+        "prettier"
+    ],
+    "overrides": [
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "@typescript-eslint",   
+        "prettier"
+    ],
+    "rules": {
+        "prettier/prettier": 2,
+        "@typescript-eslint/no-unused-vars": "warn",
+        "react/react-in-jsx-scope": "off"
+    }
 }
